# i-guess-that-counts

./: CMakeLists.txt  README.md
include/: ConcurrentContainerFacade.hpp  ThreadPool.hpp  UniqueWordsCounter.hpp
src/: main.cpp
